2008-11-26	The InnoDB Team

	* row/row0merge.c (row_merge_drop_temp_indexes):
	Replace the WHILE 1 with WHILE 1=1 in the SQL procedure, so that
	the loop will actually be entered and temporary indexes be dropped
	during crash recovery.

2008-10-31	The InnoDB Team

	* dict/dict0mem.c, include/dict0mem.h, include/lock0lock.h,
	include/row0mysql.h, include/trx0trx.h, include/univ.i,
	include/ut0vec.h, include/ut0vec.ic, lock/lock0lock.c,
	row/row0mysql.c, trx/trx0trx.c:
	Fix Bug#26316 Triggers create duplicate entries on auto-increment
	columns

2008-10-30	The InnoDB Team

	* handler/ha_innodb.cc, handler/handler0vars.h,
	handler/win_delay_loader.cc, mysql-test/innodb_bug40360.result,
	mysql-test/innodb_bug40360.test:
	Fix Bug#40360 Binlog related errors with binlog off

2008-10-29	The InnoDB Team

	* include/data0type.ic:
	Fix Bug#40369 dtype_get_sql_null_size() returns 0 or 1, not the size

2008-10-29	The InnoDB Team

	* handler/ha_innodb.cc, include/srv0srv.h, srv/srv0srv.c:
	Fix Bug#38189 innodb_stats_on_metadata missing

2008-10-28	The InnoDB Team

	* CMakeLists.txt, ha_innodb.def, handler/ha_innodb.cc,
	handler/handler0alter.cc, handler/handler0vars.h, handler/i_s.cc,
	handler/win_delay_loader.cc, win-plugin/*:
	Implemented the delayloading of externals for the plugin on Windows.
	This makes it possible to build a dynamic plugin (ha_innodb.dll) on
	Windows.

2008-10-27	The InnoDB Team

	* CMakeLists.txt:
	Fix Bug#19424 InnoDB: Possibly a memory overrun of the buffer being
	freed (64-bit Visual C)

2008-10-23	The InnoDB Team

	* ibuf/ibuf0ibuf.c:
	ibuf_delete_rec(): When the cursor to the insert buffer record
	cannot be restored, do not complain if the tablespace does not
	exist, because the insert buffer record may have been discarded by
	some other thread. This bug has existed in MySQL/InnoDB since
	version 4.1, when innodb_file_per_table was implemented.
	This may fix Bug#27276 InnoDB Error: ibuf cursor restoration fails.

2008-10-22	The InnoDB Team
