@@ -11,7 +11,7 @@ Created 1/20/1994 Heikki Tuuri
 
 #define INNODB_VERSION_MAJOR	1
 #define INNODB_VERSION_MINOR	0
-#define INNODB_VERSION_BUGFIX	2
+#define INNODB_VERSION_BUGFIX	3
 
 /* The following is the InnoDB version as shown in
 SELECT plugin_version FROM information_schema.plugins;
