@@ -8,7 +8,9 @@
 -- disable_query_log
 -- disable_result_log
 
-SET @@max_allowed_packet=16777216;
+# set packet size and reconnect 
+SET @@global.max_allowed_packet=16777216;
+--connect (newconn, localhost, root,,)
 
 DROP TABLE IF EXISTS bug34300;
 CREATE TABLE bug34300 (
