@@ -427,7 +427,7 @@ trx_undo_seg_create(
 	if (slot_no == ULINT_UNDEFINED) {
 		ut_print_timestamp(stderr);
 		fprintf(stderr,
-			"InnoDB: Warning: cannot find a free slot for"
+			"  InnoDB: Warning: cannot find a free slot for"
 			" an undo log. Do you have too\n"
 			"InnoDB: many active transactions"
 			" running concurrently?\n");
