@@ -37,7 +37,7 @@ diff -Nur sql/CMakeLists.txt.orig sql/CMakeLists.txt
 diff -Nur sql/mysqld.def.orig sql/mysqld.def
 --- sql/mysqld.def.orig	1969-12-31 18:00:00 -06:00
 +++ sql/mysqld.def	2008-10-31 02:20:32 -05:00
-@@ -0,0 +1,99 @@
+@@ -0,0 +1,98 @@
 +EXPORTS
 +	?use_hidden_primary_key@handler@@UAEXXZ
 +	?get_dynamic_partition_info@handler@@UAEXPAUPARTITION_INFO@@I@Z
@@ -82,11 +82,10 @@ diff -Nur sql/mysqld.def.orig sql/mysqld.def
 +	?THR_THD@@3PAVTHD@@A
 +	?end_of_list@@3Ulist_node@@A
 +	?mysql_tmpdir_list@@3Ust_my_tmpdir@@A
-+	?mysql_bin_log@@3VMYSQL_BIN_LOG@@A
-+	?is_open@MYSQL_LOG@@QAE_NXZ
 +	mysql_query_cache_invalidate4
 +	thd_query
 +	thd_sql_command
++	thd_get_thread_id
 +	thd_get_xid
 +	thd_slave_thread
 +	thd_non_transactional_update
@@ -141,7 +140,7 @@ diff -Nur sql/mysqld.def.orig sql/mysqld.def
 diff -Nur sql/mysqld_x64.def.orig sql/mysqld_x64.def
 --- sql/mysqld_x64.def.orig	1969-12-31 18:00:00 -06:00
 +++ sql/mysqld_x64.def		2008-10-31 02:22:04 -05:00
-@@ -0,0 +1,99 @@
+@@ -0,0 +1,98 @@
 +EXPORTS
 +	?use_hidden_primary_key@handler@@UEAAXXZ
 +	?get_dynamic_partition_info@handler@@UEAAXPEAUPARTITION_INFO@@I@Z
@@ -186,11 +185,10 @@ diff -Nur sql/mysqld_x64.def.orig sql/mysqld_x64.def
 +	?THR_THD@@3PEAVTHD@@EA
 +	?end_of_list@@3Ulist_node@@A
 +	?mysql_tmpdir_list@@3Ust_my_tmpdir@@A
-+	?mysql_bin_log@@3VMYSQL_BIN_LOG@@A
-+	?is_open@MYSQL_LOG@@QEAA_NXZ
 +	mysql_query_cache_invalidate4
 +	thd_query
 +	thd_sql_command
++	thd_get_thread_id
 +	thd_get_xid
 +	thd_slave_thread
 +	thd_non_transactional_update
